# ai-digit-recognition-basics

./: .gitignore  KI anwendung Referat WS 2024_286577.pptx  README.md  pyproject.toml
scr/: KI_anwendung_ManuelCaipo.ipynb  diagrama.tex  flujo.tex  presentation.md  utils.py
