[tool.black]
skip-string-normalization = true

[tool.isort]
profile = "black"
extend_skip = [".md", ".json"]
skip_gitignore = true

[tool.poetry]
name = "aufgabeki"
version = "5.3.2"
description = "KI anwendung"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.5.0"
scikit-learn = "^1.2.0"
xgboost = "^1.7.0"
treeinterpreter = "^0.2.3"
loguru = "^0.7.0"
azureml-core = "^1.49.0"
azure-identity = "^1.12.0"
azureml-mlflow = "^1.49.0"
openpyxl = "^3.1.0"
python-Levenshtein = "^0.21.0"
fuzzywuzzy = "^0.18.0"
statsmodels = "^0.13.5"
scipy = "^1.9.0"
ipython = "^8.15.0"
ipykernel = "^6.25.2"
torch = "^2.0.1"
torchvision = "^0.15.2"
matplotlib = "^3.7.1"
numpy = "<2.0"
torchviz = "^0.0.3"
tensorboard = "^2.18.0"
protobuf = ">=3.20,<3.21"

# TensorFlow and TensorFlow IO need to be installed via pip manually:
# pip install tensorflow==2.8.0 tensorflow-io-gcs-filesystem==0.28.0
opencv-python = "^4.10.0.84"

[tool.poetry.group.dev.dependencies]
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
keyring = "^23.13.0"
artifacts-keyring = "^0.3.2"
black = "^23.0.0"
flake8 = "^5.0.4"
pytest = "^7.4.2"
pre-commit = "^3.0.5"
pytest-cov = "^4.0.0"
isort = "^5.12.0"
invoke = "^2.0.0"
databricks-cli = "^0.18.0"
Jinja2 = "^3.1.2"
safety = "^2.3.0"
bandit = "^1.8.0"
mypy = "^1.0.1"
types-PyYAML = "^6.0.12.4"
types-python-dateutil = "^2.8.19.7"
pandas-stubs = {version = "^1.5.2.230302", python = "<3.12"}
ipykernel = "^6.25.2"

[tool.poetry.scripts]

[build-system]
